--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,34 @@
 language: php
-
-php:
-  - 5.3
-  - 5.4
-  - 5.5
-
 sudo: false
-
+php:
+- 5.3
+- 5.4
+- 5.5
+- 5.6
+- hhvm
+matrix:
+  allow_failures:
+  - php: 5.6
+  - php: hhvm
 env:
-  - MAGENTO_VERSION="1.5.0.1"
-  - MAGENTO_VERSION="1.6.0.0"
-  - MAGENTO_VERSION="1.6.1.0"
-  - MAGENTO_VERSION="1.6.2.0"
-  - MAGENTO_VERSION="1.7.0.0"
-  - MAGENTO_VERSION="1.7.0.1"
-  - MAGENTO_VERSION="1.7.0.2"
-  - MAGENTO_VERSION="1.8.0.0"
-  - MAGENTO_VERSION="1.8.1.0"
-  - MAGENTO_VERSION="1.9.0.0"
-  - MAGENTO_VERSION="1.9.0.1"
-  - MAGENTO_VERSION="1.9.1.0"
-
-before_script:
-  - mkdir magento/
-  - git clone https://github.com/netz98/n98-magerun ./n98-magerun/
-  - git clone git://github.com/EcomDev/MageCI.git ./mageci/
-  - ./mageci/bin/mage-ci install magento $MAGENTO_VERSION magento_test -c -t -r http://mage-ci.ecomdev.org
-  - composer update
-  - git clone git://github.com/EcomDev/EcomDev_PHPUnit.git -b dev ./phpunit/
-  - CURR_DIR=$(pwd)
-  - wget https://raw.githubusercontent.com/colinmollenhour/modman/master/modman -O ./mageci/bin/modman
-  - chmod +x ./mageci/bin/modman
-  - ./mageci/bin/mage-ci install-module magento $CURR_DIR/phpunit
-  - ./mageci/bin/mage-ci install-module magento $CURR_DIR
-  - composer install --dev
-  - cd magento
-
+  matrix:
+  - MAGENTO_VERSION=magento-ce-1.5.0.1
+  - MAGENTO_VERSION=magento-ce-1.6.0.0
+  - MAGENTO_VERSION=magento-ce-1.6.1.0
+  - MAGENTO_VERSION=magento-ce-1.6.2.0
+  - MAGENTO_VERSION=magento-ce-1.7.0.0
+  - MAGENTO_VERSION=magento-ce-1.7.0.1
+  - MAGENTO_VERSION=magento-ce-1.7.0.2
+  - MAGENTO_VERSION=magento-ce-1.8.0.0
+  - MAGENTO_VERSION=magento-ce-1.8.1.0
+  - MAGENTO_VERSION=magento-ce-1.9.0.0
+  - MAGENTO_VERSION=magento-ce-1.9.0.1
+  - MAGENTO_VERSION=magento-ce-1.9.1.1
+  global:
+    secure: RsXdjcvJXbnXH3O53h/8rVx6kdOZydY+f/2mI4HdAR9Yu9VL15VMcRClQnaHayJa1hzsWgAX32AFYxNl0iRz8NPWAGki2OkGmsRhhg8fyH1HD3KPITyRyoTb//yogNCi77/SHbFJzWFi/V7RXqqXTInTvwWU/UBmhjiE3if3LNk=
 script:
-  - ../vendor/bin/phpunit --group Ffuenf_DevTools
+- curl -sSL https://raw.githubusercontent.com/ffuenf/MageTestStand/master/setup.sh
+  | bash
+notifications:
+  slack:
+    secure: bPy6G6sc8iNpGQUwmKiriaUkVpL7T+6BPIWFitBuGIAqigAEgvkaHzdNo0ZQQNvhlBQBqT897kPSkAsMWKsqkxX8WAmh8Y1DzRx+Vb1ETzYjKMQ4MbXVy6e7zElEZ94ULxyT58XU+R3pyUeQ3AifFOJeNYzVn9YFpNhehW59Gs4=
