--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-  "name": "ffuenf/Ffuenf_DevTools",
-  "license": "OSL-3.0",
+  "name": "Ffuenf/Ffuenf_DevTools",
+  "license": "MIT",
+  "description": "This is a extension for Magento Community Edition that adds access to commonly used development tasks in the backend.",
   "authors": [
     {
       "name": "Achim Rosenhagen",
@@ -9,11 +10,11 @@
   ],
   "type": "magento-module",
   "require": {
-    "magento-hackathon/magento-composer-installer": "*",
+    "aoepeople/composer-installers": "*",
     "colinmollenhour/modman": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.*"
+    "phpunit/phpunit": "4.*"
   },
   "repositories": [
     {
@@ -22,6 +23,20 @@
     }
   ],
   "extra": {
-    "magento-root-dir": "./magento/"
+    "magento-root-dir": "./magento/",
+    "map": [
+      [
+        "app/code/local/Ffuenf/DevTools",
+        "app/code/local/Ffuenf/DevTools"
+      ],
+      [
+        "app/etc/modules/Ffuenf_DevTools.xml",
+        "app/etc/modules/Ffuenf_DevTools.xml"
+      ],
+      [
+        "app/design/adminhtml/default/default/template/devtools",
+        "app/design/adminhtml/default/default/template/devtools"
+      ]
+    ]
   }
 }
