--- a/app/code/local/Ffuenf/DevTools/Test/Helper/Data/fixtures/testIsN98MagerunAvailable.yaml
+++ b/app/code/local/Ffuenf/DevTools/Test/Helper/Data/fixtures/testIsN98MagerunAvailable.yaml
@@ -1,2 +1,2 @@
 config:
-  default/ffuenf_devtools/n98magerun/path: "../n98-magerun/n98-magerun.phar"
+  default/ffuenf_devtools/n98magerun/path: "../tools/n98-magerun"
