--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ env:
   - MAGENTO_VERSION=magento-ce-1.7.0.2
   - MAGENTO_VERSION=magento-ce-1.6.2.0
   global:
-    secure: RsXdjcvJXbnXH3O53h/8rVx6kdOZydY+f/2mI4HdAR9Yu9VL15VMcRClQnaHayJa1hzsWgAX32AFYxNl0iRz8NPWAGki2OkGmsRhhg8fyH1HD3KPITyRyoTb//yogNCi77/SHbFJzWFi/V7RXqqXTInTvwWU/UBmhjiE3if3LNk=
+  - secure: RsXdjcvJXbnXH3O53h/8rVx6kdOZydY+f/2mI4HdAR9Yu9VL15VMcRClQnaHayJa1hzsWgAX32AFYxNl0iRz8NPWAGki2OkGmsRhhg8fyH1HD3KPITyRyoTb//yogNCi77/SHbFJzWFi/V7RXqqXTInTvwWU/UBmhjiE3if3LNk=
+  - secure: QI8aBN/skgM6ZBimeXWCV4VtffTezNKXIvz+dJYZufttexUUs7TwkvWYQrfVa5a59z2DBAS9oJvUI5NxJ/htSaT44TDjI1peDoCsI52Sk7Ze9tQBaRC4ToiDPaAiTNLJ88k3ojX/qVQNLyr/Z6bsI9wTD43s14Phelxgx5KIfW4=
 script:
-- curl -sSL https://raw.githubusercontent.com/ffuenf/MageTestStand/master/setup.sh
-  | bash
+- curl -sSL https://raw.githubusercontent.com/ffuenf/MageTestStand/master/setup.sh | bash
 notifications:
   slack:
-    secure: bPy6G6sc8iNpGQUwmKiriaUkVpL7T+6BPIWFitBuGIAqigAEgvkaHzdNo0ZQQNvhlBQBqT897kPSkAsMWKsqkxX8WAmh8Y1DzRx+Vb1ETzYjKMQ4MbXVy6e7zElEZ94ULxyT58XU+R3pyUeQ3AifFOJeNYzVn9YFpNhehW59Gs4=
+    secure: feL+V6PTceG21/bvX6aYJdnMreNjuvezqWs/Dk2a/dPAWBCqgCPrnghEvEENuSVKaSOPKPnZWOEUlhQykjLvCKJo+2eGV45cF2cWOiHJDN2CUstjczaVsIn6HqZEI9Eog8EmhGGKpAU9PhOnGVLk6YmQYWvIE3x90V2T2BDCQ+A=
