fix scrutinizer-ci config

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,23 +1,16 @@
-before_commands:
-    - git clone https://github.com/magento-ecg/coding-standard ../magento-ecg/
-
-imports:
-    - php
-
 tools:
     php_sim: true
     php_changetracking: true
     php_mess_detector: true
+    php_cs_fixer: true
     php_pdepend: true
     php_analyzer: true
     external_code_coverage:
         timeout: 600
+    sensiolabs_security_checker: true
     php_code_sniffer:
         config:
-            standard: Zend
-            include_standards:
-                - ../magento-ecg/
-
+            standard: 'Zend'
 checks:
     php:
         align_assignments: false
