add more layout xml conditions (credits to [magehandles](https://github.com/aleron75/magehandles) by Alessandro Ronchi)

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,16 @@
         "app/etc/modules/Ffuenf_DevTools.xml"
       ],
       [
+        "app/design/adminhtml/default/default/layout/devtools.xml",
+        "app/design/adminhtml/default/default/layout/devtools.xml"
+      ],
+      [
         "app/design/adminhtml/default/default/template/devtools",
         "app/design/adminhtml/default/default/template/devtools"
+      ],
+      [
+        "skin/adminhtml/default/default/headerbar.css",
+        "skin/adminhtml/default/default/headerbar.css"
       ]
     ]
   }
