add resave-products shell script (timeframe configurable via backend settings) fix wrong helpers fix compatibility to [SUPEE-6788](https://info2.magento.com/rs/318-XBX-392/images/SUPEE-6788-Technical%20Details.pdf?mkt_tok=3RkMMJWWfF9wsRolv6jPZKXonjHpfsX66uskXqOxlMI%2F0ER3fOvrPUfGjI4CSMFjI%2BSLDwEYGJlv6SgFSbHNMbhiwrgOUhM%3D)

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
   - php: hhvm
 env:
   matrix:
+  - MAGENTO_VERSION=magento-mirror-1.9.2.2
   - MAGENTO_VERSION=magento-mirror-1.9.2.1
   - MAGENTO_VERSION=magento-ce-1.9.1.1
   - MAGENTO_VERSION=magento-ce-1.8.1.0
