--- a/.travis.yml
+++ b/.travis.yml
@@ -8,34 +8,27 @@ cache:
   - "$HOME/.n98-magerun/modules"
   - "$HOME/.cache/magento"
 php:
-- 5.5
-- 5.6
 - 7.0
+- 7.1
+- 7.2
 matrix:
   fast_finish: true
   allow_failures:
-  - php: 5.6
-    env: MAGENTO_VERSION=ce-1.8.1.0
-  - php: 7.0
-    env: MAGENTO_VERSION=ce-1.8.1.0
+  - php: 7.1
+  - php: 7.2
 env:
   global:
   - APPNAME=Ffuenf_DevTools
-  - secure: jTkSEu95OLDcpqixmQaVCO6P+R05VioKD8TvhkwonNHoZEXcoAjnLevL1r130DALZzmYLHueW04NJUSgHfB1OsAg/A0XOqckxbMEXfiMH6yE6fnh3cs8dUn/RXFCZpkASOVJiglaKUhs89wEo+pr2g//q/XDNo7GuO+wu61oJg4=
-  - secure: XY9N4BFvWU37oJnQLtodrtFtIiOctDCX7EDBzCD+tqChCOIylAKPT9L5Zx4FJAqE17mVFXuoWkgfe8gQl4NZimnHMyxr11Q9nv/AAPSTeb2JM3YwIQPijtIpSEAA80LdfSuwHKK6tgX39Z/Y/dwjDZIYf4CRdILbNP2f2cJGUyo=
-  - secure: ouroGLFoK91JM6O+mVHQ8gf4hPRqfdpB1izd3xAZqzlGTSG/8P5ZhjSqQwasGrmo2m53LHwFOXl7PJpBdR/+VXMLSsl37VDquLJSFvepz+yFQFK6uW/fBbXF0Ph47xAV24SeWlqWlKM95NRX0rg2XL4LHaEsgFco91p3jUlNHS4=
   matrix:
+  - MAGENTO_VERSION=ce-1.9.3.7
   - MAGENTO_VERSION=ce-1.9.2.4
   - MAGENTO_VERSION=ce-1.9.1.1
-  - MAGENTO_VERSION=ce-1.8.1.0
-  - MAGENTO_VERSION=ce-1.7.0.2
-  - MAGENTO_VERSION=ce-1.6.2.0
 before_install:
 - curl -sSL https://raw.githubusercontent.com/ffuenf/MageTestStand/master/before_install.sh
   | bash
 script:
-- curl -sSL https://raw.githubusercontent.com/ffuenf/MageTestStand/master/script.sh
-  | bash
+- curl -sSL https://raw.githubusercontent.com/ffuenf/MageTestStand/master/script.sh |
+  bash
 deploy:
   provider: releases
   file:
@@ -45,8 +38,3 @@ deploy:
   on:
     branch: master
     tags: true
-  api_key:
-    secure: OsRWUIBZWnRoFw7eucLpDzIGsSCdv0c2lxp9lYWQ8HEGEBuTjkZB4NNWtzkax5bD7OKfBVPKuc6LFJk3eBbV6KmKyfCvOGQ7/s5D7I75klXGv1weJgYOmmwT5FUcgh1YwXfVEYexx7NIVj6Ralem3TmF+mQGGc67aNfDcQ4LGhA=
-notifications:
-  slack:
-    secure: G8TNLuy7KaZHCo3Q0Y/4mTeoon78bDKNGhwgeD7q0Kx+HDAs/EbCXK1fjn0nZlrvb2HPrlkMJ4s1Y02cgfopFzcTeNTbDp2G3Ioo8Qc0zDlvOKF24YdFhY3wfweZKn1YI4o1lzu2dbiCZabxnHV3eANoQ0iv20izGrWHOioIu6A=
